Changelog
=========

2.0 (2011-07-14)
~~~~~~~~~~~~~~~~

- Point release.

- Move implementation-specific context setup to ``render``
  method. This allows use of template class with an already prepared
  context.

- Fixed issue with the call flag on the Zope traverser compiler.

2.0-rc3 (2011-07-11)
~~~~~~~~~~~~~~~~~~~~

- Python-expressions are no longer TALES-expressions; previously, the
  pipe operator would split Python expression clauses, allowing
  fallbacks even for Python expressions, but this is not the standard
  behavior of ZPT.

- Fixed an issue where an error which occurred inside a dynamic
  ``path`` or ``exists`` evaluation would fail to propagate due to a
  missing remote context.

- Set variables ``here`` and ``context`` to the bound instance value
  on ``PageTemplate`` instances.

2.0-rc2 (2011-03-24)
~~~~~~~~~~~~~~~~~~~~

- Fixed an issue with ``"exists:"`` expression where a callable would
  be attempted called. It is meanwhile implied with this expression
  types that it should use the ``"nocall:"`` pragma.


2.0-rc1 (2011-02-28)
~~~~~~~~~~~~~~~~~~~~

- Update to Chameleon 2.0.

  This release includes many changes and is a complete rewrite of the
  1.x series.

  Platform:

  * Python 2.5+ now required.

  Notable changes:

  * Expression interpolation is always enabled.

  * Whitespace output is different, now closely aligned to the
    template input.

  * New language constructs:

    1) tal:on-error
    2) tal:switch
    3) tal:case

  Incompatibilities:

  * The expression translation interface has been replaced with an
    expression engine. This means that all expressions must be
    rewritten.

- The exists expression evaluator should ignore KeyError exceptions
  as well.

- Special-case handling of Zope2's Missing.MV as used by
  Products.ZCatalog for LP#649343.
  [rossp]

1.2.1 (2010/05/13)
------------------

- Bind template to the template object in the general case.

1.2 (2010/05/12)
------------------
